# VKawaii

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: jules_task.md
.github/workflows/: ci.yml  jules.yml
blender_addon/: vkawaii_exporter.py
shaders/: mtoon.wgsl
src/: main.rs  test_compilation.rs
src/core/: engine.rs  events.rs
src/models/: mod.rs  spring_bone_parser.rs  tests.rs  vkw_loader.rs  vrm_loader.rs
src/physics/: mod.rs  spring_bones.rs  tests.rs
src/rendering/: armature_test.rs  dxbc_parser.rs  mod.rs  mtoon.rs  shader_transpiler.rs  skinning.rs  toon_shader.wgsl
src/scripting/: action_executor.rs  mod.rs  node_graph.rs
src/streaming/: mod.rs  spout_sender.rs  websocket_server.rs
src/tracking/: audio_lipsync.rs  hotkeys.rs  mediapipe.rs  mod.rs  vmc_receiver.rs
src/ui/: mod.rs  node_editor.rs  orbit_camera.rs  overlay.rs  tests.rs
unity_plugin/Editor/: VKawaiiExporter.cs
